syntax = "proto3";
import "google/protobuf/empty.proto";
package product;

option go_package = "product-service/api";

service ProductCatalogService {
  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {} // 商品列表
  rpc GetProduct(GetProductReq) returns (GetProductResp) {} //通过id获取商品
  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp) {} //通过查询获取商品
  rpc CreateProducts(Product) returns (google.protobuf.Empty); //创建商品
  rpc DeleteProducts(DeleteProductsInfo) returns (google.protobuf.Empty); //删除商品
  rpc UpdateProducts(Product) returns (google.protobuf.Empty); //更新商品
}

message ListProductsReq{
  int32 page = 1;
  int64 pageSize = 2;
  string categoryName = 3;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  repeated string categories = 6;
}

message ListProductsResp {
  repeated Product products = 1;
}

message GetProductReq {
  uint32 id = 1;
}

message GetProductResp {
  Product product = 1;
}

message SearchProductsReq {
  string query = 1;
}

message SearchProductsResp {
  repeated Product results = 1;
}

message DeleteProductsInfo {
  uint32 id = 1;
}



